--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -16,7 +16,7 @@
     margin: 0.35em;
     padding: 0.3em 0.5em;
     background-color: var(--main);
-    color: var(--white);
+    color: var(--light);
     border-radius: var(--border-radius);
     font-size: 1em;
     box-shadow: var(--level-3);
