--- a/sass/_links.scss
+++ b/sass/_links.scss
@@ -5,7 +5,7 @@ a {
   transition: all 0.3s ease-in-out;
 
   &:not([class]):hover {
-    color: var(--main);
+    color: var(--anchor-hover);
     border-bottom: none;
     transition: transform 200ms ease 0s;
   }
@@ -14,7 +14,7 @@ a {
 a[class] {
   padding: 0.3em 1em;
   background: var(--main);
-  color: var(--white);
+  color: var(--light);
   border-radius: var(--border-radius);
   display: inline-flex;
   align-items: center;
@@ -31,6 +31,14 @@ a[class] {
   }
 }
 
+header a,
+main a,
+footer a {
+  &:not([class]):hover {
+    --anchor-hover: var(--darkerPink);
+  }
+}
+
 .skip-link {
   --main: hsla(0, 0%, 100%, 0.2);
   position: absolute;
@@ -41,13 +49,23 @@ a[class] {
   }
 }
 
+aside#styles .container {
+  ul+a {
+    --light: var(--darkGrey);
+    background: inherit;
+    border: 1px solid black;
+    border-bottom: solid 2px var(--anchor);
+  }
+}
+
 aside.profile .container {
   ul+a {
     padding: 0.3rem 1rem;
     display: inline-block;
-    background: var(--main);
-    color: var(--white);
+    background: inherit;
     border-radius: var(--border-radius);
+    border: 1px solid black;
+    border-bottom: solid 2px var(--anchor);
     text-decoration: none;
     transition: all 0.3s ease 0s;
 
@@ -56,18 +74,11 @@ aside.profile .container {
     }
 
     &:hover {
-      background: var(--main);
-      color: var(--white);
-      border-bottom: solid 2px var(--anchor);
+      --anchor-hover: var(--darkGrey);
       box-shadow: var(--level-3);
       transform: scale(1.05);
     }
   }
-}
-
-aside.profile .container a:not([class]):hover,
-aside#styles .container a:not([class]):hover {
-  color: var(--white);
 }
 
 .link-github {
