--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -1,4 +1,5 @@
 .profile {
+  background: var(--lighterGreen);
   grid-area: aside2;
 
   .container {
