--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -1,4 +1,5 @@
 #styles {
+  background: var(--lighterGreen);
   grid-area: aside1;
   padding-bottom: var(--size-700);
 
